[gd_scene load_steps=6 format=3 uid="uid://bbq44of38lr42"]

[ext_resource type="Script" path="res://Tree/Tree.gd" id="1_70lm4"]
[ext_resource type="Texture2D" uid="uid://cv7haw2m1d02f" path="res://Bush/selection.png" id="2_csib7"]
[ext_resource type="Texture2D" uid="uid://vh2f4guf5g1a" path="res://Tree/Tree.png" id="2_u5l15"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6ef0"]
size = Vector2(50, 37.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5lho"]
size = Vector2(23, 15)

[node name="Tree" type="StaticBody2D"]
script = ExtResource("1_70lm4")

[node name="Selection" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 0.5)
texture = ExtResource("2_csib7")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_m6ef0")

[node name="ObjectSpace" type="CollisionShape2D" parent="." groups=["Targetable"]]
shape = SubResource("RectangleShape2D_y5lho")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(1, -41)
texture = ExtResource("2_u5l15")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
